refactors de seguridad